package this.is.not.used;

option java_package = "net.jarlehansen.proto2javame.generated.sourcecode.tests.tempfiles";
option java_outer_classname = "this.is.not.used";

message JunitTestMainObject {
	required int32 id = 1;
}