package this.is.not.used;

option java_package = "com.google.protobuf.javame.generated";
option java_outer_classname = "this.is.not.used";

message JunitTestObject {
	required int32 id = 1;
	required int64 longNumber = 2;
	optional string name = 3;
	repeated string addressList = 4;
	required bytes bytesObject = 5;
	required float floatObject = 6;
	optional bool boolObj = 7;
	required double amount = 8;
}